y.output
Grammar

    0 $accept: start $end

    1 start: External_Declaration

    2 External_Declaration: External_Declaration Declaration
    3                     | External_Declaration Function
    4                     | %empty

    5 Declaration: Type Assignment
    6            | Assignment

    7 Function: Type DOUBLECOLON ID '(' ArgListOpt ')' CompoundStatement

    8 ArgListOpt: ArgList
    9           | %empty

   10 ArgList: ArgList ',' Arg
   11        | Arg

   12 Arg: Type ID

   13 CompoundStatement: '{' StatementList '}'

   14 StatementList: Statement StatementList
   15              | %empty

   16 Statement: Declaration
   17          | IfBlockStatements
   18          | WhileStatement

   19 IfBlockStatements: IfStatement ElseIfStatement ElseStatement

   20 IfStatement: IF '(' Expression ')' '{' StatementList '}'

   21 ElseIfStatement: ELSEIF '(' Expression ')' '{' StatementList '}'
   22                | %empty

   23 ElseStatement: ELSE '{' StatementList '}'
   24              | %empty

   25 WhileStatement: WHILE '(' Expression ')' '{' StatementList '}'

   26 Expression: Expression LE Expression
   27           | Expression GE Expression
   28           | Expression NE Expression
   29           | Expression EQ Expression
   30           | Expression GT Expression
   31           | Expression LT Expression
   32           | Expression OR Expression
   33           | Expression AND Expression
   34           | NOT Expression
   35           | ID
   36           | NUM

   37 Assignment: ID ':' Assignment
   38           | ID '+' Assignment
   39           | ID '-' Assignment
   40           | ID '*' Assignment
   41           | ID '/' Assignment
   42           | NUM '+' Assignment
   43           | NUM '-' Assignment
   44           | NUM '*' Assignment
   45           | NUM '/' Assignment
   46           | NUM
   47           | ID

   48 Type: INT
   49     | FLOAT
   50     | CHAR
   51     | DOUBLE
   52     | VOID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7 20 21 25
')' (41) 7 20 21 25
'*' (42) 40 44
'+' (43) 38 42
',' (44) 10
'-' (45) 39 43
'/' (47) 41 45
':' (58) 37
'{' (123) 13 20 21 23 25
'}' (125) 13 20 21 23 25
error (256)
INT (258) 48
FLOAT (259) 49
CHAR (260) 50
DOUBLE (261) 51
VOID (262) 52
IF (263) 20
ELSEIF (264) 21
ELSE (265) 23
NUM (266) 36 42 43 44 45 46
ID (267) 7 12 35 37 38 39 40 41 47
AND (268) 33
OR (269) 32
NOT (270) 34
DOUBLECOLON (271) 7
WHILE (272) 25
LE (273) 26
GE (274) 27
EQ (275) 29
NE (276) 28
LT (277) 31
GT (278) 30


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
start (35)
    on left: 1, on right: 0
External_Declaration (36)
    on left: 2 3 4, on right: 1 2 3
Declaration (37)
    on left: 5 6, on right: 2 16
Function (38)
    on left: 7, on right: 3
ArgListOpt (39)
    on left: 8 9, on right: 7
ArgList (40)
    on left: 10 11, on right: 8 10
Arg (41)
    on left: 12, on right: 10 11
CompoundStatement (42)
    on left: 13, on right: 7
StatementList (43)
    on left: 14 15, on right: 13 14 20 21 23 25
Statement (44)
    on left: 16 17 18, on right: 14
IfBlockStatements (45)
    on left: 19, on right: 17
IfStatement (46)
    on left: 20, on right: 19
ElseIfStatement (47)
    on left: 21 22, on right: 19
ElseStatement (48)
    on left: 23 24, on right: 19
WhileStatement (49)
    on left: 25, on right: 18
Expression (50)
    on left: 26 27 28 29 30 31 32 33 34 35 36, on right: 20 21 25 26
    27 28 29 30 31 32 33 34
Assignment (51)
    on left: 37 38 39 40 41 42 43 44 45 46 47, on right: 5 6 37 38
    39 40 41 42 43 44 45
Type (52)
    on left: 48 49 50 51 52, on right: 5 7 12


State 0

    0 $accept: . start $end

    $default  reduce using rule 4 (External_Declaration)

    start                 go to state 1
    External_Declaration  go to state 2


State 1

    0 $accept: start . $end

    $end  shift, and go to state 3


State 2

    1 start: External_Declaration .
    2 External_Declaration: External_Declaration . Declaration
    3                     | External_Declaration . Function

    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    CHAR    shift, and go to state 6
    DOUBLE  shift, and go to state 7
    VOID    shift, and go to state 8
    NUM     shift, and go to state 9
    ID      shift, and go to state 10

    $default  reduce using rule 1 (start)

    Declaration  go to state 11
    Function     go to state 12
    Assignment   go to state 13
    Type         go to state 14


State 3

    0 $accept: start $end .

    $default  accept


State 4

   48 Type: INT .

    $default  reduce using rule 48 (Type)


State 5

   49 Type: FLOAT .

    $default  reduce using rule 49 (Type)


State 6

   50 Type: CHAR .

    $default  reduce using rule 50 (Type)


State 7

   51 Type: DOUBLE .

    $default  reduce using rule 51 (Type)


State 8

   52 Type: VOID .

    $default  reduce using rule 52 (Type)


State 9

   42 Assignment: NUM . '+' Assignment
   43           | NUM . '-' Assignment
   44           | NUM . '*' Assignment
   45           | NUM . '/' Assignment
   46           | NUM .

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 46 (Assignment)


State 10

   37 Assignment: ID . ':' Assignment
   38           | ID . '+' Assignment
   39           | ID . '-' Assignment
   40           | ID . '*' Assignment
   41           | ID . '/' Assignment
   47           | ID .

    ':'  shift, and go to state 19
    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23

    $default  reduce using rule 47 (Assignment)


State 11

    2 External_Declaration: External_Declaration Declaration .

    $default  reduce using rule 2 (External_Declaration)


State 12

    3 External_Declaration: External_Declaration Function .

    $default  reduce using rule 3 (External_Declaration)


State 13

    6 Declaration: Assignment .

    $default  reduce using rule 6 (Declaration)


State 14

    5 Declaration: Type . Assignment
    7 Function: Type . DOUBLECOLON ID '(' ArgListOpt ')' CompoundStatement

    NUM          shift, and go to state 9
    ID           shift, and go to state 10
    DOUBLECOLON  shift, and go to state 24

    Assignment  go to state 25


State 15

   42 Assignment: NUM '+' . Assignment

    NUM  shift, and go to state 9
    ID   shift, and go to state 10

    Assignment  go to state 26


State 16

   43 Assignment: NUM '-' . Assignment

    NUM  shift, and go to state 9
    ID   shift, and go to state 10

    Assignment  go to state 27


State 17

   44 Assignment: NUM '*' . Assignment

    NUM  shift, and go to state 9
    ID   shift, and go to state 10

    Assignment  go to state 28


State 18

   45 Assignment: NUM '/' . Assignment

    NUM  shift, and go to state 9
    ID   shift, and go to state 10

    Assignment  go to state 29


State 19

   37 Assignment: ID ':' . Assignment

    NUM  shift, and go to state 9
    ID   shift, and go to state 10

    Assignment  go to state 30


State 20

   38 Assignment: ID '+' . Assignment

    NUM  shift, and go to state 9
    ID   shift, and go to state 10

    Assignment  go to state 31


State 21

   39 Assignment: ID '-' . Assignment

    NUM  shift, and go to state 9
    ID   shift, and go to state 10

    Assignment  go to state 32


State 22

   40 Assignment: ID '*' . Assignment

    NUM  shift, and go to state 9
    ID   shift, and go to state 10

    Assignment  go to state 33


State 23

   41 Assignment: ID '/' . Assignment

    NUM  shift, and go to state 9
    ID   shift, and go to state 10

    Assignment  go to state 34


State 24

    7 Function: Type DOUBLECOLON . ID '(' ArgListOpt ')' CompoundStatement

    ID  shift, and go to state 35


State 25

    5 Declaration: Type Assignment .

    $default  reduce using rule 5 (Declaration)


State 26

   42 Assignment: NUM '+' Assignment .

    $default  reduce using rule 42 (Assignment)


State 27

   43 Assignment: NUM '-' Assignment .

    $default  reduce using rule 43 (Assignment)


State 28

   44 Assignment: NUM '*' Assignment .

    $default  reduce using rule 44 (Assignment)


State 29

   45 Assignment: NUM '/' Assignment .

    $default  reduce using rule 45 (Assignment)


State 30

   37 Assignment: ID ':' Assignment .

    $default  reduce using rule 37 (Assignment)


State 31

   38 Assignment: ID '+' Assignment .

    $default  reduce using rule 38 (Assignment)


State 32

   39 Assignment: ID '-' Assignment .

    $default  reduce using rule 39 (Assignment)


State 33

   40 Assignment: ID '*' Assignment .

    $default  reduce using rule 40 (Assignment)


State 34

   41 Assignment: ID '/' Assignment .

    $default  reduce using rule 41 (Assignment)


State 35

    7 Function: Type DOUBLECOLON ID . '(' ArgListOpt ')' CompoundStatement

    '('  shift, and go to state 36


State 36

    7 Function: Type DOUBLECOLON ID '(' . ArgListOpt ')' CompoundStatement

    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    CHAR    shift, and go to state 6
    DOUBLE  shift, and go to state 7
    VOID    shift, and go to state 8

    $default  reduce using rule 9 (ArgListOpt)

    ArgListOpt  go to state 37
    ArgList     go to state 38
    Arg         go to state 39
    Type        go to state 40


State 37

    7 Function: Type DOUBLECOLON ID '(' ArgListOpt . ')' CompoundStatement

    ')'  shift, and go to state 41


State 38

    8 ArgListOpt: ArgList .
   10 ArgList: ArgList . ',' Arg

    ','  shift, and go to state 42

    $default  reduce using rule 8 (ArgListOpt)


State 39

   11 ArgList: Arg .

    $default  reduce using rule 11 (ArgList)


State 40

   12 Arg: Type . ID

    ID  shift, and go to state 43


State 41

    7 Function: Type DOUBLECOLON ID '(' ArgListOpt ')' . CompoundStatement

    '{'  shift, and go to state 44

    CompoundStatement  go to state 45


State 42

   10 ArgList: ArgList ',' . Arg

    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    CHAR    shift, and go to state 6
    DOUBLE  shift, and go to state 7
    VOID    shift, and go to state 8

    Arg   go to state 46
    Type  go to state 40


State 43

   12 Arg: Type ID .

    $default  reduce using rule 12 (Arg)


State 44

   13 CompoundStatement: '{' . StatementList '}'

    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    CHAR    shift, and go to state 6
    DOUBLE  shift, and go to state 7
    VOID    shift, and go to state 8
    IF      shift, and go to state 47
    NUM     shift, and go to state 9
    ID      shift, and go to state 10
    WHILE   shift, and go to state 48

    $default  reduce using rule 15 (StatementList)

    Declaration        go to state 49
    StatementList      go to state 50
    Statement          go to state 51
    IfBlockStatements  go to state 52
    IfStatement        go to state 53
    WhileStatement     go to state 54
    Assignment         go to state 13
    Type               go to state 55


State 45

    7 Function: Type DOUBLECOLON ID '(' ArgListOpt ')' CompoundStatement .

    $default  reduce using rule 7 (Function)


State 46

   10 ArgList: ArgList ',' Arg .

    $default  reduce using rule 10 (ArgList)


State 47

   20 IfStatement: IF . '(' Expression ')' '{' StatementList '}'

    '('  shift, and go to state 56


State 48

   25 WhileStatement: WHILE . '(' Expression ')' '{' StatementList '}'

    '('  shift, and go to state 57


State 49

   16 Statement: Declaration .

    $default  reduce using rule 16 (Statement)


State 50

   13 CompoundStatement: '{' StatementList . '}'

    '}'  shift, and go to state 58


State 51

   14 StatementList: Statement . StatementList

    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    CHAR    shift, and go to state 6
    DOUBLE  shift, and go to state 7
    VOID    shift, and go to state 8
    IF      shift, and go to state 47
    NUM     shift, and go to state 9
    ID      shift, and go to state 10
    WHILE   shift, and go to state 48

    $default  reduce using rule 15 (StatementList)

    Declaration        go to state 49
    StatementList      go to state 59
    Statement          go to state 51
    IfBlockStatements  go to state 52
    IfStatement        go to state 53
    WhileStatement     go to state 54
    Assignment         go to state 13
    Type               go to state 55


State 52

   17 Statement: IfBlockStatements .

    $default  reduce using rule 17 (Statement)


State 53

   19 IfBlockStatements: IfStatement . ElseIfStatement ElseStatement

    ELSEIF  shift, and go to state 60

    $default  reduce using rule 22 (ElseIfStatement)

    ElseIfStatement  go to state 61


State 54

   18 Statement: WhileStatement .

    $default  reduce using rule 18 (Statement)


State 55

    5 Declaration: Type . Assignment

    NUM  shift, and go to state 9
    ID   shift, and go to state 10

    Assignment  go to state 25


State 56

   20 IfStatement: IF '(' . Expression ')' '{' StatementList '}'

    NUM  shift, and go to state 62
    ID   shift, and go to state 63
    NOT  shift, and go to state 64

    Expression  go to state 65


State 57

   25 WhileStatement: WHILE '(' . Expression ')' '{' StatementList '}'

    NUM  shift, and go to state 62
    ID   shift, and go to state 63
    NOT  shift, and go to state 64

    Expression  go to state 66


State 58

   13 CompoundStatement: '{' StatementList '}' .

    $default  reduce using rule 13 (CompoundStatement)


State 59

   14 StatementList: Statement StatementList .

    $default  reduce using rule 14 (StatementList)


State 60

   21 ElseIfStatement: ELSEIF . '(' Expression ')' '{' StatementList '}'

    '('  shift, and go to state 67


State 61

   19 IfBlockStatements: IfStatement ElseIfStatement . ElseStatement

    ELSE  shift, and go to state 68

    $default  reduce using rule 24 (ElseStatement)

    ElseStatement  go to state 69


State 62

   36 Expression: NUM .

    $default  reduce using rule 36 (Expression)


State 63

   35 Expression: ID .

    $default  reduce using rule 35 (Expression)


State 64

   34 Expression: NOT . Expression

    NUM  shift, and go to state 62
    ID   shift, and go to state 63
    NOT  shift, and go to state 64

    Expression  go to state 70


State 65

   20 IfStatement: IF '(' Expression . ')' '{' StatementList '}'
   26 Expression: Expression . LE Expression
   27           | Expression . GE Expression
   28           | Expression . NE Expression
   29           | Expression . EQ Expression
   30           | Expression . GT Expression
   31           | Expression . LT Expression
   32           | Expression . OR Expression
   33           | Expression . AND Expression

    AND  shift, and go to state 71
    OR   shift, and go to state 72
    LE   shift, and go to state 73
    GE   shift, and go to state 74
    EQ   shift, and go to state 75
    NE   shift, and go to state 76
    LT   shift, and go to state 77
    GT   shift, and go to state 78
    ')'  shift, and go to state 79


State 66

   25 WhileStatement: WHILE '(' Expression . ')' '{' StatementList '}'
   26 Expression: Expression . LE Expression
   27           | Expression . GE Expression
   28           | Expression . NE Expression
   29           | Expression . EQ Expression
   30           | Expression . GT Expression
   31           | Expression . LT Expression
   32           | Expression . OR Expression
   33           | Expression . AND Expression

    AND  shift, and go to state 71
    OR   shift, and go to state 72
    LE   shift, and go to state 73
    GE   shift, and go to state 74
    EQ   shift, and go to state 75
    NE   shift, and go to state 76
    LT   shift, and go to state 77
    GT   shift, and go to state 78
    ')'  shift, and go to state 80


State 67

   21 ElseIfStatement: ELSEIF '(' . Expression ')' '{' StatementList '}'

    NUM  shift, and go to state 62
    ID   shift, and go to state 63
    NOT  shift, and go to state 64

    Expression  go to state 81


State 68

   23 ElseStatement: ELSE . '{' StatementList '}'

    '{'  shift, and go to state 82


State 69

   19 IfBlockStatements: IfStatement ElseIfStatement ElseStatement .

    $default  reduce using rule 19 (IfBlockStatements)


State 70

   26 Expression: Expression . LE Expression
   27           | Expression . GE Expression
   28           | Expression . NE Expression
   29           | Expression . EQ Expression
   30           | Expression . GT Expression
   31           | Expression . LT Expression
   32           | Expression . OR Expression
   33           | Expression . AND Expression
   34           | NOT Expression .

    $default  reduce using rule 34 (Expression)


State 71

   33 Expression: Expression AND . Expression

    NUM  shift, and go to state 62
    ID   shift, and go to state 63
    NOT  shift, and go to state 64

    Expression  go to state 83


State 72

   32 Expression: Expression OR . Expression

    NUM  shift, and go to state 62
    ID   shift, and go to state 63
    NOT  shift, and go to state 64

    Expression  go to state 84


State 73

   26 Expression: Expression LE . Expression

    NUM  shift, and go to state 62
    ID   shift, and go to state 63
    NOT  shift, and go to state 64

    Expression  go to state 85


State 74

   27 Expression: Expression GE . Expression

    NUM  shift, and go to state 62
    ID   shift, and go to state 63
    NOT  shift, and go to state 64

    Expression  go to state 86


State 75

   29 Expression: Expression EQ . Expression

    NUM  shift, and go to state 62
    ID   shift, and go to state 63
    NOT  shift, and go to state 64

    Expression  go to state 87


State 76

   28 Expression: Expression NE . Expression

    NUM  shift, and go to state 62
    ID   shift, and go to state 63
    NOT  shift, and go to state 64

    Expression  go to state 88


State 77

   31 Expression: Expression LT . Expression

    NUM  shift, and go to state 62
    ID   shift, and go to state 63
    NOT  shift, and go to state 64

    Expression  go to state 89


State 78

   30 Expression: Expression GT . Expression

    NUM  shift, and go to state 62
    ID   shift, and go to state 63
    NOT  shift, and go to state 64

    Expression  go to state 90


State 79

   20 IfStatement: IF '(' Expression ')' . '{' StatementList '}'

    '{'  shift, and go to state 91


State 80

   25 WhileStatement: WHILE '(' Expression ')' . '{' StatementList '}'

    '{'  shift, and go to state 92


State 81

   21 ElseIfStatement: ELSEIF '(' Expression . ')' '{' StatementList '}'
   26 Expression: Expression . LE Expression
   27           | Expression . GE Expression
   28           | Expression . NE Expression
   29           | Expression . EQ Expression
   30           | Expression . GT Expression
   31           | Expression . LT Expression
   32           | Expression . OR Expression
   33           | Expression . AND Expression

    AND  shift, and go to state 71
    OR   shift, and go to state 72
    LE   shift, and go to state 73
    GE   shift, and go to state 74
    EQ   shift, and go to state 75
    NE   shift, and go to state 76
    LT   shift, and go to state 77
    GT   shift, and go to state 78
    ')'  shift, and go to state 93


State 82

   23 ElseStatement: ELSE '{' . StatementList '}'

    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    CHAR    shift, and go to state 6
    DOUBLE  shift, and go to state 7
    VOID    shift, and go to state 8
    IF      shift, and go to state 47
    NUM     shift, and go to state 9
    ID      shift, and go to state 10
    WHILE   shift, and go to state 48

    $default  reduce using rule 15 (StatementList)

    Declaration        go to state 49
    StatementList      go to state 94
    Statement          go to state 51
    IfBlockStatements  go to state 52
    IfStatement        go to state 53
    WhileStatement     go to state 54
    Assignment         go to state 13
    Type               go to state 55


State 83

   26 Expression: Expression . LE Expression
   27           | Expression . GE Expression
   28           | Expression . NE Expression
   29           | Expression . EQ Expression
   30           | Expression . GT Expression
   31           | Expression . LT Expression
   32           | Expression . OR Expression
   33           | Expression . AND Expression
   33           | Expression AND Expression .

    LE  shift, and go to state 73
    GE  shift, and go to state 74
    EQ  shift, and go to state 75
    NE  shift, and go to state 76
    LT  shift, and go to state 77
    GT  shift, and go to state 78

    $default  reduce using rule 33 (Expression)


State 84

   26 Expression: Expression . LE Expression
   27           | Expression . GE Expression
   28           | Expression . NE Expression
   29           | Expression . EQ Expression
   30           | Expression . GT Expression
   31           | Expression . LT Expression
   32           | Expression . OR Expression
   32           | Expression OR Expression .
   33           | Expression . AND Expression

    AND  shift, and go to state 71
    LE   shift, and go to state 73
    GE   shift, and go to state 74
    EQ   shift, and go to state 75
    NE   shift, and go to state 76
    LT   shift, and go to state 77
    GT   shift, and go to state 78

    $default  reduce using rule 32 (Expression)


State 85

   26 Expression: Expression . LE Expression
   26           | Expression LE Expression .
   27           | Expression . GE Expression
   28           | Expression . NE Expression
   29           | Expression . EQ Expression
   30           | Expression . GT Expression
   31           | Expression . LT Expression
   32           | Expression . OR Expression
   33           | Expression . AND Expression

    $default  reduce using rule 26 (Expression)


State 86

   26 Expression: Expression . LE Expression
   27           | Expression . GE Expression
   27           | Expression GE Expression .
   28           | Expression . NE Expression
   29           | Expression . EQ Expression
   30           | Expression . GT Expression
   31           | Expression . LT Expression
   32           | Expression . OR Expression
   33           | Expression . AND Expression

    $default  reduce using rule 27 (Expression)


State 87

   26 Expression: Expression . LE Expression
   27           | Expression . GE Expression
   28           | Expression . NE Expression
   29           | Expression . EQ Expression
   29           | Expression EQ Expression .
   30           | Expression . GT Expression
   31           | Expression . LT Expression
   32           | Expression . OR Expression
   33           | Expression . AND Expression

    $default  reduce using rule 29 (Expression)


State 88

   26 Expression: Expression . LE Expression
   27           | Expression . GE Expression
   28           | Expression . NE Expression
   28           | Expression NE Expression .
   29           | Expression . EQ Expression
   30           | Expression . GT Expression
   31           | Expression . LT Expression
   32           | Expression . OR Expression
   33           | Expression . AND Expression

    $default  reduce using rule 28 (Expression)


State 89

   26 Expression: Expression . LE Expression
   27           | Expression . GE Expression
   28           | Expression . NE Expression
   29           | Expression . EQ Expression
   30           | Expression . GT Expression
   31           | Expression . LT Expression
   31           | Expression LT Expression .
   32           | Expression . OR Expression
   33           | Expression . AND Expression

    $default  reduce using rule 31 (Expression)


State 90

   26 Expression: Expression . LE Expression
   27           | Expression . GE Expression
   28           | Expression . NE Expression
   29           | Expression . EQ Expression
   30           | Expression . GT Expression
   30           | Expression GT Expression .
   31           | Expression . LT Expression
   32           | Expression . OR Expression
   33           | Expression . AND Expression

    $default  reduce using rule 30 (Expression)


State 91

   20 IfStatement: IF '(' Expression ')' '{' . StatementList '}'

    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    CHAR    shift, and go to state 6
    DOUBLE  shift, and go to state 7
    VOID    shift, and go to state 8
    IF      shift, and go to state 47
    NUM     shift, and go to state 9
    ID      shift, and go to state 10
    WHILE   shift, and go to state 48

    $default  reduce using rule 15 (StatementList)

    Declaration        go to state 49
    StatementList      go to state 95
    Statement          go to state 51
    IfBlockStatements  go to state 52
    IfStatement        go to state 53
    WhileStatement     go to state 54
    Assignment         go to state 13
    Type               go to state 55


State 92

   25 WhileStatement: WHILE '(' Expression ')' '{' . StatementList '}'

    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    CHAR    shift, and go to state 6
    DOUBLE  shift, and go to state 7
    VOID    shift, and go to state 8
    IF      shift, and go to state 47
    NUM     shift, and go to state 9
    ID      shift, and go to state 10
    WHILE   shift, and go to state 48

    $default  reduce using rule 15 (StatementList)

    Declaration        go to state 49
    StatementList      go to state 96
    Statement          go to state 51
    IfBlockStatements  go to state 52
    IfStatement        go to state 53
    WhileStatement     go to state 54
    Assignment         go to state 13
    Type               go to state 55


State 93

   21 ElseIfStatement: ELSEIF '(' Expression ')' . '{' StatementList '}'

    '{'  shift, and go to state 97


State 94

   23 ElseStatement: ELSE '{' StatementList . '}'

    '}'  shift, and go to state 98


State 95

   20 IfStatement: IF '(' Expression ')' '{' StatementList . '}'

    '}'  shift, and go to state 99


State 96

   25 WhileStatement: WHILE '(' Expression ')' '{' StatementList . '}'

    '}'  shift, and go to state 100


State 97

   21 ElseIfStatement: ELSEIF '(' Expression ')' '{' . StatementList '}'

    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    CHAR    shift, and go to state 6
    DOUBLE  shift, and go to state 7
    VOID    shift, and go to state 8
    IF      shift, and go to state 47
    NUM     shift, and go to state 9
    ID      shift, and go to state 10
    WHILE   shift, and go to state 48

    $default  reduce using rule 15 (StatementList)

    Declaration        go to state 49
    StatementList      go to state 101
    Statement          go to state 51
    IfBlockStatements  go to state 52
    IfStatement        go to state 53
    WhileStatement     go to state 54
    Assignment         go to state 13
    Type               go to state 55


State 98

   23 ElseStatement: ELSE '{' StatementList '}' .

    $default  reduce using rule 23 (ElseStatement)


State 99

   20 IfStatement: IF '(' Expression ')' '{' StatementList '}' .

    $default  reduce using rule 20 (IfStatement)


State 100

   25 WhileStatement: WHILE '(' Expression ')' '{' StatementList '}' .

    $default  reduce using rule 25 (WhileStatement)


State 101

   21 ElseIfStatement: ELSEIF '(' Expression ')' '{' StatementList . '}'

    '}'  shift, and go to state 102


State 102

   21 ElseIfStatement: ELSEIF '(' Expression ')' '{' StatementList '}' .

    $default  reduce using rule 21 (ElseIfStatement)
